Fixed alignment issue in dialogs

--- a/web-app/css/dialog.css
+++ b/web-app/css/dialog.css
@@ -15,7 +15,10 @@ input:required:valid { background-image: url(/dialog/css/theme/images/validation
 .ac-selected input { border: 0px solid #ddd;padding:0px;background-color: transparent;}
 .ac-selecting { border: 0px solid #223311;padding:1px;}
 .ac-icon {display: inline-block;vertical-align:middle;}
-td.value { padding-top:4px;}
+td.name { padding-top:4px;font-size:14px;}
+td.value { padding-top:4px;;font-size:14px;}
+div.dialog-message {margin-bottom:10px;font-style:italic}
+
 .autocomplete-container { height:18px;display: inline-block;}
 
 td.tinymce textarea {width:100%;}
